--- a/styles/main.css
+++ b/styles/main.css
@@ -136,7 +136,7 @@ input[type="button"] {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    width: 100%
+    width: 100%;
 }
 
 input[type="checkbox"] {
@@ -277,6 +277,52 @@ footer {
     height: auto;
     box-shadow: 0 0 30px #777;
     margin: .5rem;
+}
+
+#foods {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: .5rem;
+    align-items: center;
+    margin-bottom: 3rem;
+}
+
+#foods article {
+    height: 350px;
+    margin: .5rem;
+    border: 1px solid rgba(0, 0, 0, .1);
+    padding: 1rem;
+    background-color: #eee;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#foods h4 {
+    color: navy;
+    font-size: smaller;
+}
+
+#foods img {
+    width: 250px;
+    height: auto;
+    box-shadow: 0 0 30px #777;
+    margin: .5rem;
+}
+
+#letter-bar{
+    margin-bottom: 30px;
+}
+
+.letter {
+    padding: .5rem;
+    background-color: #444;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 30px !important;
 }
 
 /* Media Queries */
